--- a/holi.css
+++ b/holi.css
@@ -8,6 +8,8 @@ div {
 .scrolling-images {
     width: 100%;
     overflow: hidden;
+    /* opacity: 0; */
+    
 }
 
 .scrolling-images img {
@@ -29,6 +31,7 @@ div {
     height: 600px;
     overflow: hidden;
     margin: auto;
+    border-radius: 15px;
 }
 
 .background-video {
@@ -52,7 +55,7 @@ div {
 .happy-holi-btn {
     background-color: #f44336;
     color: white;
-    padding: 15px 25px;
+    padding: 0px 25px;
     font-size: 24px;
     border: none;
     cursor: pointer;
